<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_setting"
        android:id="@+id/setting_title_tv"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_font_tall"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaaaaa"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_tall"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_music"
            android:id="@+id/setting_music_tv"
            android:layout_weight="1"
            android:textSize="@dimen/text_font_tall"
            android:gravity="center_vertical" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_music_on_btn"
            android:layout_weight="0"
            android:checked="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_volume"
            android:id="@+id/setting_volume_tv"
            android:layout_weight="1"
            android:textSize="@dimen/text_font_medium"
            android:gravity="center_vertical" />

        <SeekBar
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/setting_volume_seekbar"
            android:layout_gravity="center_vertical"
            android:indeterminate="false" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaaaaa"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_tall"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_sound_effects"
            android:id="@+id/setting_sound_effects_tv"
            android:layout_weight="1"
            android:textSize="@dimen/text_font_tall"
            android:gravity="center_vertical" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_sound_effects_on_btn"
            android:layout_weight="0"
            android:checked="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_volume"
            android:id="@+id/setting_volume2_tv"
            android:layout_weight="1"
            android:textSize="@dimen/text_font_medium"
            android:gravity="center_vertical" />

        <SeekBar
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/setting_volume_seekbar2"
            android:layout_gravity="center_vertical"
            android:indeterminate="false" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaaaaa"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_tall"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_vibro"
            android:id="@+id/setting_vibro_tv"
            android:layout_weight="1"
            android:textSize="@dimen/text_font_tall"
            android:gravity="center_vertical" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_vibro_on_btn"
            android:layout_weight="0"
            android:checked="false" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aaaaaa"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_tall"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setting_difficulty"
            android:id="@+id/setting_difficalty_tv"
            android:layout_weight="1"
            android:textSize="@dimen/text_font_tall"
            android:gravity="center_vertical" />

        <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:indeterminate="false"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

</LinearLayout>