<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GameActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:src="@drawable/dollar"
            android:layout_weight="1" />

        <TextView android:text="@string/app_name" android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:id="@+id/main_title_tv"
            android:textStyle="bold"
            android:textSize="@dimen/text_font_giant" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:src="@drawable/dollar"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0$"
            android:id="@+id/main_money_tv"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|italic"
            android:textSize="@dimen/text_font_tall"
            android:layout_marginBottom="10dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_tall"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/item1_name"
                        android:id="@+id/buy_item1_btn"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_medium" />

                    <TextView
                        android:layout_width="@dimen/button_width_small"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:id="@+id/item1_count_tv"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_tall"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_tall"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/item2_name"
                        android:id="@+id/buy_item2_btn"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_medium" />

                    <TextView
                        android:layout_width="@dimen/button_width_small"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:id="@+id/item2_count_tv"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_tall"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_tall"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/item3_name"
                        android:id="@+id/buy_item3_btn"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_medium" />

                    <TextView
                        android:layout_width="@dimen/button_width_small"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:id="@+id/item3_count_tv"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_tall"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_tall"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/item4_name"
                        android:id="@+id/buy_item4_btn"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_medium" />

                    <TextView
                        android:layout_width="@dimen/button_width_small"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:id="@+id/item4_count_tv"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_tall"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_tall"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/item5_name"
                        android:id="@+id/buy_item5_btn"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_medium" />

                    <TextView
                        android:layout_width="@dimen/button_width_small"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:id="@+id/item5_count_tv"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_tall"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_tall"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/item6_name"
                        android:id="@+id/buy_item6_btn"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_medium" />

                    <TextView
                        android:layout_width="@dimen/button_width_small"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:id="@+id/item6_count_tv"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_tall"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_tall"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/item7_name"
                        android:id="@+id/buy_item7_btn"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_medium" />

                    <TextView
                        android:layout_width="@dimen/button_width_small"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:id="@+id/item7_count_tv"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_font_tall"
                        android:gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
